--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -64,7 +64,7 @@
                     <input type="hidden" name="idxs[]" value={{forloop.counter0}} >
                     <div class="content">
                         <a href="javascript:void(0);" onclick="javascript:goClassDetail({{classList_detail.prd_code}});">
-                            <img src={{classList_detail.prd_list_img}} alt="코딩키트 썸네일" >
+                            <img src="/static/resource/img/{{classList_detail.prd_list_img}}" alt="코딩키트 썸네일" >
                         </a>
                     </div>
 
