--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -97,7 +97,6 @@
     </script>
 
     <div class="header_wrap">
-        <input type="hidden" id="clientId" name="clientId" value={{ request.session.user_id }}>
         <a href="/" class="logo">
             <img src="{% static 'resource/img/common/logo.png' %}" alt="runcoding">
         </a>
@@ -114,77 +113,13 @@
                 <a href="/comunity/">커뮤니티</a>
             </li>
             <li>
-                <a href="javascript:goMyClass_header();">나의 강의실</a>
+                <a>나의 강의실</a>
             </li>
         </ul>
         <div class="ab_right">
-            <div class="user_menu">
-                <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
-                <ul class="sub_menu">
-                     <div id="logout" >
-                         {% if request.session.runcoding > 10 %}
-                         <a href="/deposit_list/" target="_blank">
-                            <li style="border-bottom:1px solid #dcdcdc;">
-                                관리자모드
-                            </li>
-                        </a>
-                         {% endif %}
-                          <a href="/myprofile/">
-                              <li style="border-bottom:1px solid #dcdcdc;">
-                               내 프로필
-                            </li>
-                          </a>
-                         <a href="/coupon/">
-                              <li style="border-bottom:1px solid #dcdcdc;">
-                               쿠폰
-                            </li>
-                          </a>
-                        <a href="/myorder/">
-                            <li style="border-bottom:1px solid #dcdcdc;">
-                                주문내역
-                            </li>
-                        </a>
-                        <a href="/order/">
-                            <li style="border-bottom:1px solid #dcdcdc; ">
-                                {% if request.session.order_count > 0 %}
-                                <div style="float:left; padding-right:5px;">장바구니 </div>
-                                <div class="img_order">
-                                    <img src="{% static 'resource/img/sub/ico_order.png' %}">
-                                    <div class="content">{{request.session.order_count}}</div>
-                                </div>
-                                {% else %}
-                                장바구니
-                                {% endif %}
-                            </li>
-                         </a>
-                        <a href="/run_logout/">
-                            <li>
-                                로그아웃
-                            </li>
-                        </a>
-                     </div>
-                     <div id="login">
-                         <a href="/run_login/">
-                             <li>
-                                로그인
-                             </li>
-                         </a>
-                         <a href="/order/">
-                            <li style="border-bottom:1px solid #dcdcdc; ">
-                                {% if request.session.order_count > 0 %}
-                                <div style="float:left; padding-right:5px;">장바구니 </div>
-                                <div class="img_order">
-                                    <img src="{% static 'resource/img/sub/ico_order.png' %}">
-                                    <div class="content">{{request.session.order_count}}</div>
-                                </div>
-                                {% else %}
-                                장바구니
-                                {% endif %}
-                            </li>
-                         </a>
-                     </div>
-                </ul>
-            </div>
+                <div class="user_menu">
+                    <span class="userImg"><img src="{% static 'resource/img/sub/img_user.png' %}" alt="유저 프로필"></span>
+                </div>
         </div>
     </div>
 </header>
