인공지능 참참참

--- a/main/templates/class/class_list.html
+++ b/main/templates/class/class_list.html
@@ -28,7 +28,7 @@
                     <img src="{% static 'resource/img/lecture_list/kit-title.jpg' %}" style="dispay:block; margin: 0px auto;" alt="강의 수">
                 </span>
                 <span style="float:left;" >
-                    <a  class="btn_kit" href="javascript:void(0);" onclick="javascript:goSearchLarge('mblock');">&nbsp;
+                    <a  class="btn_kit" href="javascript:void(0);" onclick="javascript:goSearchLarge('block');">&nbsp;
                         <img id="mblock" src="{% static 'resource/img/lecture_list/mblock_off.jpg' %}" onmouseout="this.src='{% static 'resource/img/lecture_list/mblock_off.jpg' %}'" onmouseover="this.src='{% static 'resource/img/lecture_list/mblock_on.jpg' %}'" alt="강의 수">
                     </a>
                 </span>
