인공지능 참참참

--- a/main/templates/product/AICharmGame.html
+++ b/main/templates/product/AICharmGame.html
@@ -22,15 +22,15 @@
             <img src="{% static 'resource/img/charmcharm/charm_detail_03.jpg' %}"alt="상품상세 이미지1">
 
             <img src="{% static 'resource/img/charmcharm/charm_detail_04.jpg' %}"alt="상품상세 이미지1">
-             <video width ="680" height="500" controls playsinline controlsList="nodownload" style="padding-left:45px">
+             <video width ="640" height="500" controls playsinline controlsList="nodownload" >
                     <source src="{% static 'resource/img/charmcharm/charm_detail_05_restore.mp4' %}" type="video/mp4"> >
              </video>
-
+         <br/>
             <img src="{% static 'resource/img/charmcharm/charm_detail_06.jpg' %}"alt="상품상세 이미지1">
-             <video width ="680" height="500" controls playsinline controlsList="nodownload" style="padding-left:45px">
+             <video width ="640" height="500" controls playsinline controlsList="nodownload" >
                     <source src="{% static 'resource/img/charmcharm/charm_detail_07_restore.mp4' %}" type="video/mp4"> >
              </video>
-
+ <br/>
             <img src="{% static 'resource/img/charmcharm/charm_detail_08.jpg' %}"alt="상품상세 이미지1">
             <img src="{% static 'resource/img/charmcharm/charm_detail_09.jpg' %}"alt="상품상세 이미지1">
          </div>
