--- a/main/templates/class/class_detail.html
+++ b/main/templates/class/class_detail.html
@@ -59,20 +59,24 @@
                             </ul>
                         </div>
                     </div>
+                     <div></div>
+                    <div class="btn_area">
+                        {% if prd_detail.link != null %}
+                        <a class="btn buy" href="javascript:void(0);" onClick="javascript:goPay('{{prd_detail.link}}');" >구매하기</a>
+                        {% else %}
+                         <a class="btn buy" href="javascript:void(0);" >문의 주세요~</a>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
 
-
-        <script type="text/javascript" src="//pay.naver.com/customer/js/naverPayButton.js"></script>
-        <script type="text/javascript" src="//pay.naver.com/customer/js/mobile/naverPayButton.js"></script>
 
         {% include "common/banner_bottom.html" %}
         {% include "common/footer.html" %}
 
     </div>
 
-    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.6.js"></script>
     <script>
         $(document).ready(function() {
 
@@ -111,6 +115,12 @@
          function numberWithCommas(x)
          {
               return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+         }
+
+         function goPay(url)
+         {
+            var win = window.open(url, '_blank');
+            win.focus();
          }
 
 
