스마트 스토어 연동

--- a/main/templates/common/banner_bottom.html
+++ b/main/templates/common/banner_bottom.html
@@ -7,5 +7,14 @@
         CREATIVE CODING KIT로 학습하는 <b>런코딩!</b><br/>
         지금 시작해보세요.
     </span>
-    <a href="/class/" class="btn">시작하기</a>
+   <a class="btn" href="javascript:void(0);" onClick="javascript:goPay();">구매하기</a>
 </div>
+
+<script>
+     function goPay()
+     {
+        var win = window.open('https://smartstore.naver.com/runcoding', '_blank');
+        win.focus();
+     }
+
+</script>
