--- a/main/templates/common/header.html
+++ b/main/templates/common/header.html
@@ -21,7 +21,7 @@
                 e.preventDefault();
                 e.returnValue = false;
 
-                $("#res_msg").text("접근하시면 안됩니다.");
+                $("#res_msg").text("접근하시면 안됩니다. (닫기:esc키)");
                 $('div.modal').modal();
             }
             if ( e.keyCode == 16 /* F12 */)
@@ -29,7 +29,7 @@
                 e.preventDefault();
                 e.returnValue = false;
 
-                $("#res_msg").text("접근하시면 안됩니다.");
+                $("#res_msg").text("접근하시면 안됩니다. (닫기:esc키)");
                 $('div.modal').modal();
             }
 
@@ -51,7 +51,7 @@
     {
          if($("input[type=hidden][name=clientId]").val() == "")
          {
-            $("#res_msg").text("회원만 접근이 가능합니다. 로그인 후 이용해주세요.");
+            $("#res_msg").text("회원만 접근이 가능합니다. 로그인 후 이용해주세요. ");
             $('div.modal').modal();
          }
          else
@@ -63,7 +63,7 @@
 
     // 우측 클릭 방지
     document.onmousedown=disableclick;
-    status="오른쪽 마우스 사용을 할 수 없습니다.";
+    status="오른쪽 마우스 사용을 할 수 없습니다. (닫기:esc키)";
 
 
     function disableclick(event){
@@ -113,7 +113,7 @@
 
     function goPay()
     {
-        var win = window.open('https://smartstore.naver.com/runcoding', '_blank');
+        var win = window.open('https://smartstore.naver.com/runcoding/products/5579509945', '_blank');
         win.focus();
     }
 
@@ -128,7 +128,7 @@
         <!-- gnb -->
         <ul class="menu">
             <li>
-                <a class="btn buy" href="javascript:void(0);" onClick="javascript:goPay();" >구매하기</a>
+                <a class="btn buy" href="javascript:void(0);" onClick="javascript:goPay();" >교사연수신청</a>
             </li>
             <li>
                 <a href="/lounge/">코딩라운지</a>
